--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
    <head>
       <meta charset="utf-8">
       <title>GitHub Pages</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
       <h1>Hello GitHub!</h1>
-      <img src="https://github.com/IsabelleKrall.png">
+      <!-- <div class="circle"></div> -->
+      <img class="img" src="me.jpg" alt="isabellekrall">
+      <p>[me:] isabelle krall</br>
+      [contact:] <a href=mailto:"isabellekrall@gmail.com">isabellekrall@gmail.com</a></br></br>
+      <img src="https://media.giphy.com/media/xT9IgIc0lryrxvqVGM/giphy.gif" alt="catgif">
    </body>
 </html>
